testdata/invalid/dynamic_divisor_missing_guard.hzn
package probes

@tracepoint("sched:sched_process_exec")
func OnExec(ctx tracepoint.Exec) i32 {
    denom := bpf.current_pid()
    value := u32(100) / denom
    if value == 0 {
        return 0
    }
    return 0
}
